[package]
name = "shared"
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
